--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(../images/bg\ image.jpg);
+  background: url(image/bg image.jpg);
   background-repeat: no-repeat;
   background-size: 100% 500px;
 }
